# calculator-app

./: .gitignore  pyproject.toml
app/: main.py
calculator_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/calculator/: calculator_engine.py
