[project]
name = "calculator-app"
version = "0.1.0"
description = "A modern web-based calculator"
authors = [
    { name = "Hend", email = "hend.moftah@student.univaq.it" },
]
dependencies = [
    "nicegui>=1.4.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"